--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   webview_flutter: ^4.8.0
   url_launcher: ^6.3.1
   flutter_paypal: ^0.2.1
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
