--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  intl: ^0.20.2
   provider: ^6.1.2
   shared_preferences: ^2.3.5
   image_picker: ^1.1.2
@@ -43,6 +42,7 @@ dependencies:
   url_launcher: ^6.3.1
   flutter_paypal: ^0.2.1
   cached_network_image: ^3.4.1
+  khalti_flutter: ^3.0.0
 
 dev_dependencies:
   flutter_test:
