--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_paypal: ^0.2.1
   cached_network_image: ^3.4.1
   khalti_flutter: ^3.0.0
+  khalti: ^2.0.0
 
 dev_dependencies:
   flutter_test:
